--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       dockerfile: Dockerfile.builder
       args:
         - GIT_CLONE_GOKU=1
-        - GIT_CLONE_GOKU_UTIL=1
+        - GOKU_BIN_DIR=/go-goku/bin
       secrets:
         - ssh_private_key
     volumes:
@@ -18,6 +18,7 @@ services:
       - POSTGRES_USERNAME=postgres
       - PGPASSWORD=postgres
       - DATABASE_HOST=database
+      - GOKU_BIN_DIR=/go-goku/bin
     networks:
       - common-network
 
