Some improvements during fourth-app

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       - common-network
     volumes:
       - "./:/go-goku/app"
-    command: ["yarn", "--cwd", "/go-goku/app/frontend/admin"]
+    command: ["yarn", "--cwd", "/go-goku/app/frontend/admin", "start"]
 
   # Commenting out backend service because let's have our builder service run it.
   # backend:
