--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,9 @@ services:
         - ssh_private_key
     volumes:
       - "./:/go-goku/app"
+    ports:
+      - 8080:8080 # Rest API
+      - 8081:8081 # Graphql
     environment:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USERNAME=postgres
@@ -29,6 +32,7 @@ services:
     environment:
       - REACT_APP_BACKEND_HOST=localhost
       - REACT_APP_BACKEND_PORT=8080
+      - HOST=0.0.0.0 # Post for the frontend to run
     networks:
       - common-network
     volumes:
