--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -1,20 +1,20 @@
 {
-    "name": "pharmacy",
+    "name": "<goku_app_backend_go_module_name>",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
         "@ant-design/icons": "^4.1.0",
         "@types/lodash.clonedeep": "^4.5.6",
         "@types/node": "^12.12.26",
-        "@types/react": "^16.9.19",
-        "@types/react-dom": "^16.9.5",
+        "@types/react": "^18.0.14",
+        "@types/react-dom": "^18.0.0",
         "@types/react-router-dom": "^5.1.3",
         "antd": "^4.18.9",
         "axios": "^0.21.1",
         "change-case": "^4.1.1",
         "lodash.clonedeep": "^4.5.0",
-        "react": "^16.9.0",
-        "react-dom": "^16.9.0",
+        "react": "^18.0.4",
+        "react-dom": "^18.0.0",
         "react-json-view": "^1.21.3",
         "react-router-dom": "^5.1.2",
         "react-scripts": "^5.0.0",
