--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -1,6 +1,7 @@
 {
-    "name": "<goku_app_backend_go_module_name>",
+    "name": "admin",
     "version": "0.1.0",
+    "packageManager": "yarn@3.2.1",
     "private": true,
     "dependencies": {
         "@ant-design/icons": "^4.1.0",
@@ -34,7 +35,6 @@
         "eslint-plugin-react": "^7.28.0",
         "eslint-plugin-unused-imports": "^2.0.0"
     },
-    "resolutions": {},
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
