--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -25,6 +25,7 @@
         "@testing-library/jest-dom": "^5.16.2",
         "@testing-library/react": "^12.1.3",
         "@types/jest": "^27.4.1",
+        "@types/testing-library__jest-dom": "^5.14.5",
         "@typescript-eslint/eslint-plugin": "^5.12.0",
         "@typescript-eslint/parser": "^5.12.0",
         "eslint": "^7.11.0",
