--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -6,16 +6,17 @@
     "dependencies": {
         "@ant-design/icons": "^4.1.0",
         "@types/lodash.clonedeep": "^4.5.6",
-        "@types/node": "^12.12.26",
+        "@types/node": "^18.0.0",
         "@types/react": "^18.0.14",
         "@types/react-dom": "^18.0.0",
         "@types/react-router-dom": "^5.1.3",
         "antd": "^4.18.9",
-        "axios": "^0.21.1",
+        "axios": "^1.2.6",
+        "axios-hooks": "^3.1.3",
         "change-case": "^4.1.1",
         "lodash.clonedeep": "^4.5.0",
-        "react": "^18.0.4",
-        "react-dom": "^18.0.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "react-json-view": "^1.21.3",
         "react-router-dom": "^5.1.2",
         "react-scripts": "^5.0.0",
@@ -28,13 +29,14 @@
         "@types/testing-library__jest-dom": "^5.14.5",
         "@typescript-eslint/eslint-plugin": "^5.12.0",
         "@typescript-eslint/parser": "^5.12.0",
-        "eslint": "^7.11.0",
+        "eslint": "^8.32.0",
         "eslint-config-standard": "^16.0.3",
         "eslint-plugin-import": "^2.25.4",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^5.2.0",
         "eslint-plugin-react": "^7.28.0",
-        "eslint-plugin-unused-imports": "^2.0.0"
+        "eslint-plugin-unused-imports": "^2.0.0",
+        "react-devtools": "^4.27.1"
     },
     "scripts": {
         "start": "react-scripts start",
