--- a/frontend/Dockerfile.frontend
+++ b/frontend/Dockerfile.frontend
@@ -4,4 +4,5 @@ FROM node:19-alpine3.16
 RUN apk add --update make
 
 # Use yarn v2
+RUN corepack prepare yarn@stable --activate
 RUN corepack enable
